@@ -1,5 +1,7 @@
 *SVN*
 
+* Routing: drop semicolon and comma as route separators.  [Jeremy Kemper]
+
 * request.remote_ip understands X-Forwarded-For addresses with nonstandard whitespace.  #7386 [moses]
 
 * Don't prepare response when rendering a component.  #8493 [jsierles]
